fix: correct Locale instantiation in LocalResolverConfig